LIST OF CHANGES FOR NPG-QC PACKAGE

 - alternative base class npg_qc::autoqc::results::base for autoqc results objects,
     able to represent results that are derived from merged files and described by
     a composition of multiple components
 - autoqc result objects for samtools stats file, sam/bam headers and digests
     derived from the new base class
 - bam_flagstats result extension to produce samtools_stats and sequence_summary
     results (related objects) either at run time or later
 - database tables for storing component and composition objects
 - autoqc db loader extension
     - to load data represented by classes derived from the new base class
     - to build related objects in memory and to load them to the database
       bypassing serialization to a file - a way to save cram headers and stats
       file where the analysis pipeline did not run the current code that
       produces samtools_stats and sequence_summary objects as individual files
     - ability to mark records as current

release 59.0
 - SeqQC 
   - remove ajax proxy controller
   - stop 00 tests accessing live db credentials and databases
   - using mlwarehouse for dwh information displayed in SeqQC viewer
   - removing tests related to template compilation
   - providing links to lims for pool/library/sample
 - autoqc check and autoqc objects: remove unused 'sequence_type' attribute
 - autoqc check and result objects - use existing roles for id_run and
   position definitions
 - result object - to remove dependency on id run, position and tag index,
     allow individual results to overwrite the root of the output file name
 - refactor autoqc check to use file_type attribute name instead of
   input_file_ext
 - tags_reporters check - remove hardcoded solexa path
 - genotype and verify_bam_id_checks - use standard way of reporting run-time
   problems
 - bam_flagstats
     - one call to compute all metrics
     - method for finding stats files